# vulkan-ash-tutorial-rust-memo

./: .gitignore  Cargo.toml  README.md
fadis_vulkan_sample_2019/: Cargo.toml  README.md
fadis_vulkan_sample_2019/shaders/spv/: frag.spv  vert.spv
fadis_vulkan_sample_2019/shaders/src/: shader.frag  shader.vert
fadis_vulkan_sample_2019/src/: main.rs
techlabxe_vulkan_book_2/: .gitignore  Cargo.toml  README.md
techlabxe_vulkan_book_2/shaders/spv/: animation.frag.spv  animation.vert.spv  animation_outline.frag.spv  animation_outline.vert.spv  animation_shadow.frag.spv  animation_shadow.vert.spv  instancing.frag.spv  instancing.vert.spv  posteffect.frag.spv  posteffect.vert.spv  resizable.frag.spv  resizable.vert.spv  texture_rendering.frag.spv  texture_rendering.vert.spv
techlabxe_vulkan_book_2/shaders/src/: animation.frag  animation.vert  animation_outline.frag  animation_outline.vert  animation_shadow.frag  animation_shadow.vert  instancing.frag  instancing.vert  posteffect.frag  posteffect.vert  resizable.frag  resizable.vert  texture_rendering.frag  texture_rendering.vert
techlabxe_vulkan_book_2/src/: animation.rs  common.rs  instancing.rs  main.rs  posteffect.rs  resizable_window.rs  texture_rendering.rs  use_imgui.rs
techlabxe_vulkan_book_2/src/animation/: animation_app.rs  animator.rs  model.rs  pmd_loader.rs  vmd_loader.rs
techlabxe_vulkan_book_2/src/common/: cgmath_ext.rs  default_vulkan_app_base.rs  vulkan_app_base.rs  vulkan_objects.rs  window_event_loop.rs
techlabxe_vulkan_book_2/src/instancing/: instancing_app.rs
techlabxe_vulkan_book_2/src/posteffect/: posteffect_app.rs
techlabxe_vulkan_book_2/src/resizable_window/: resizable_app.rs
techlabxe_vulkan_book_2/src/texture_rendering/: texture_rendering_app.rs
techlabxe_vulkan_book_2/src/use_imgui/: use_imgui_app.rs
techlabxe_vulkan_book_3/: Cargo.toml  README.md
techlabxe_vulkan_book_3/shaders/spv/: compute_sobel_pass.comp.spv  mesh_pass.frag.spv  mesh_pass.vert.spv  model_pass.vert.spv  quad_pass.frag.spv  (+3 more)
techlabxe_vulkan_book_3/src/: app_base.rs  common.rs  cs_post_effect.rs  cubemap_app.rs  lib.rs  main.rs  vk_wrapper_object.rs
unknownue_vulkan-tutorial-rust/: Cargo.toml  README.md
unknownue_vulkan-tutorial-rust/src/: main.rs  timer.rs  tools.rs
(+69 files in other folders)
