[package]
name = "fadis_vulkan_sample_2019"
version = "0.1.0"
authors = [ "Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
ash = "0.31.0"
ash-window = "0.5.0"
cgmath = "0.17.0"
memoffset = "0.5.5"
num = "0.3.0"
tobj = "2.0.2"
vk-mem = "0.2.2"
winit = "0.22.2"
