[package]
name = "techlabxe_vulkan_book_3"
version = "0.1.0"
authors = ["Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
ash = "0.31.0"
ash-window = "0.5.0"
image = "0.23.10"
memoffset = "0.5.6"
tobj = "2.0.2"
vk-mem = "0.2.2"
winit = "0.23.0"

[dependencies.cgmath]
version = "0.17.0"
features = ["swizzle"]
