[package]
name = "unknownue_vulkan-tutorial-rust"
version = "0.1.0"
authors = ["Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
ash = "0.31.0"
memoffset = "0.5.5"
cgmath = "0.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.20.0"
cocoa = "0.23.0"
objc  = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }
